http-mirroring/gw-mirror.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mirror-gw
  namespace: web
spec:
  addresses:
  - type: "IPAddress"
    value: 192.168.48.203
  gatewayClassName: f5-gateway-class
  listeners:
  - name: http-mirror
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: "All"
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-mirror
  namespace: web
spec:
  parentRefs:
  - name: mirror-gw
    sectionName: http-mirror
  rules:
  - matches:
    - headers:
      - name: "Host"
        value: "www.f5bnk.com"
    backendRefs:
    - name: web-nginx-svc
      namespace: web
      port: 80
